# room_reconstruction

BiFuse/: main.py
BiFuse/Utils/: CubePad.py  ModelSaver.py  SpherePad.py  Transform.py
BiFuse/Utils/Cube2Equirec/: Cube2Equirec.py
BiFuse/Utils/Equirec2Cube/: Equirec2Cube.py  EquirecRotate.py  EquirecRotate2.py
BiFuse/models/: FCRN.py
Stitching_core/stitching_core/src/: CMakeLists.txt  ctpl.hpp  cubemap_projector.hpp  pipeline.cpp  pipeline.hpp
Stitching_core/stitching_core/src/correction/: borders_cut.hpp  borders_exposure_correction.hpp  borders_padding.hpp  bundle_adjuster_threaded.cpp  bundle_adjuster_threaded.hpp  estimator.hpp
Stitching_core/stitching_core/src/features/: precomp.hpp  sift.cpp  tls.hpp  xfeatures2d.hpp
Stitching_core/stitching_core/src/types/: rotations.cpp  rotations.hpp
Stitching_core/stitching_model/scr/: main.py  model.py  patches.py  utils.py
